-bug fix with tabs overflowing to the next line.

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -67,7 +67,7 @@
 }
 
 .tab.top.border.unselected {
-    height: 100%;
+    height: 22px;
     border-right: 1px solid #858585;
     padding-top: 1px;
     border-Bottom: 1px solid #858585;
